--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -3,13 +3,11 @@
 
 <head>
     <meta charset="utf-8">
-    <title>"Натяжные потолки Симферополь – Grand Comfort"</title>
+    <title>Domkomf</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="referrer" content="no-referrer">
-    <base href="/">
     <link rel="manifest" type="application/manifest+json" href="/manifest.webmanifest">
-    
-    <title>Domkomf</title>
+
     <meta name="description" content="Domkomf">
     <meta name="robots" content="index, follow">
     <meta name="googlebot" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
@@ -36,7 +34,7 @@
     <meta name="theme-color" content="#ffffff">
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-title" content="Потолки">
+    <meta name="apple-mobile-web-app-title" content="Domkomf">
     <link rel="dns-prefetch" href="https://fonts.googleapis.com">
     <link rel="dns-prefetch" href="https://fonts.gstatic.com">
     <link rel="dns-prefetch" href="https://www.google.com">
@@ -45,10 +43,12 @@
     <link rel="dns-prefetch" href="https://maps.googleapis.com">
     <link rel="dns-prefetch" href="https://maps.gstatic.com">
     <link rel="preload" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,600,700,800,900&display=swap&subset=cyrillic" as="style" media="all" onload="this.onload=null;this.rel='stylesheet'">
-    
-    <link rel="preload" href="/main.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+
     <link rel="preload" href="/bundle.js" as="script">
     <link rel="preload" href="/service-worker.js" as="worker">
+    <!--
+    <link rel="preload" href="/main.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+    -->
 </head>
 
 <body>
