--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -6,8 +6,10 @@
     <title>Domkomf</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="referrer" content="no-referrer">
+    <base href="/">
+    <!--
     <link rel="manifest" type="application/manifest+json" href="/manifest.webmanifest">
-
+    -->
     <meta name="description" content="Domkomf">
     <meta name="robots" content="index, follow">
     <meta name="googlebot" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
@@ -45,15 +47,14 @@
     <link rel="preload" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,600,700,800,900&display=swap&subset=cyrillic" as="style" media="all" onload="this.onload=null;this.rel='stylesheet'">
 
     <link rel="preload" href="/bundle.js" as="script">
-    <link rel="preload" href="/service-worker.js" as="worker">
     <!--
+    <link rel="preload" href="/service-worker.js" as="worker">
     <link rel="preload" href="/main.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
     -->
 </head>
 
 <body>
     <div id="web-page" class="wrapper"></div>
-    <script src="/bundle.js" defer></script>
 </body>
 
 </html>
