--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>React</title>
+  <script src="https://api-maps.yandex.ru/2.1/?apikey=128a3172-2545-49df-b0f1-ff60698e9e3b&lang=ru_RU" type="text/javascript" > </script>
 </head>
 
 <body>
