--- a/backend/example-write_files.html
+++ b/backend/example-write_files.html
@@ -10,7 +10,7 @@
     <h1>Upload file</h1>
     <form action="http://localhost:4000/upload" method="post" enctype="multipart/form-data">
         <label>Файл</label><br>
-        <input type="file" name="filedata" /><br><br>
+        <input type="file" multiple name="filedata"/><br><br>
         <input type="submit" value="Send" />
     </form>
     <h1>Upload files</h1>
